--- a/NodeSerialization/CMakeLists.txt
+++ b/NodeSerialization/CMakeLists.txt
@@ -30,6 +30,6 @@ endif()
 link_libraries(${BOOST_SERIALIZATION_LIB})
 
 # 将源代码添加到此项目的可执行文件。
-add_executable (${PROJECT_NAME} "main.cpp"  "serialization.h" "nodeBase.h" "node_A.h" "node_B.h" "node_C.h" "flowunit.h" "qeyeTest.h")
+add_executable (${PROJECT_NAME} "main.cpp"  "serialization.h" "nodeBase.h" "node_A.h" "node_B.h" "node_C.h" "flowunit.h" "qeyeTest.h" "node_A.cpp" "node_B.cpp" "node_C.cpp")
 
 target_link_libraries(${PROJECT_NAME} ReVisionLib QEyeVisionLibrary QEyeVisionLibraryNode)
